fixed bug pushing section 'h' down when screen collapsed below 900px

--- a/styles/layout.css
+++ b/styles/layout.css
@@ -70,14 +70,6 @@ div {
     border-right: 1px solid rgb(75, 75, 75);
   }
   #g {
-    width: 19.84%;
-    height: 250px;
-    float: left;
-    border-top: 1px solid rgb(75, 75, 75);
-    border-bottom: none;
-    border-right: 1px solid rgb(75, 75, 75);
-  }
-  #h {
     width: 19.8%;
     height: 250px;
     float: left;
@@ -85,8 +77,16 @@ div {
     border-bottom: none;
     border-right: 1px solid rgb(75, 75, 75);
   }
+  #h {
+    width: 19.75%;
+    height: 250px;
+    float: left;
+    border-top: 1px solid rgb(75, 75, 75);
+    border-bottom: none;
+    border-right: 1px solid rgb(75, 75, 75);
+  }
   #i {
-    width: 79.65%;
+    width: 79.6%;
     height: 148px;
     float: left;
     border: 1px solid rgb(75, 75, 75);
